@@ -126,6 +126,7 @@
 	define('CONDITION_TYPE_HOST_TEMPLATE',	13);
 	define('CONDITION_TYPE_EVENT_ACKNOWLEDGED',	14);
 	define('CONDITION_TYPE_APPLICATION',	15);
+	define('CONDITION_TYPE_MAINTENANCE',	16);
 
 	define('CONDITION_OPERATOR_EQUAL',	0);
 	define('CONDITION_OPERATOR_NOT_EQUAL',	1);
