@@ -290,7 +290,8 @@ typedef enum
 	CONDITION_TYPE_DVALUE,
 	CONDITION_TYPE_HOST_TEMPLATE,
 	CONDITION_TYPE_EVENT_ACKNOWLEDGED,
-	CONDITION_TYPE_APPLICATION
+	CONDITION_TYPE_APPLICATION,
+	CONDITION_TYPE_MAINTENANCE
 } zbx_condition_type_t;
 
 /* Condition operators */
